--- a/css_page.css
+++ b/css_page.css
@@ -3,8 +3,10 @@
 .logo {
     padding-top: 109px;
     height: 92px;
-    width: 272px;
+    width: 272px;  
+    margin-right: 60px; 
 }
+
 
 /*Top-left Navbar CSS */
 
@@ -45,4 +47,38 @@
     padding-left: 1em;  
     text-decoration: none;
     color: #222;
+}
+
+
+/* Search form */
+
+.search_form {
+    margin-top: 60px;
+}
+
+.input_search {
+    width: 540px;
+    height: 40px;
+    border-radius: 40px;
+    outline: none;
+    border-color: rgba(0, 51, 0, .15);
+    font: 16px arial,sans-serif;
+}
+
+/* Buttons */
+
+.submit_button {
+    margin-top: 30px;
+    border: solid #f2f2f2;
+    border-radius: 4px;
+    background-color: #f2f2f2;
+    background-image: -webkit-linear-gradient(top, #f5f5f5,#f1f1f1);
+    color: #5F6368;
+    cursor: pointer;
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    margin: 30px 4px;
+    min-width: 54px;   
+    padding: 10px 16px;
+    text-align: center;
 }
